fix: convert neutral color to gray

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   a {
-    @apply underline text-neutral-500 hover:text-indigo-600;
+    @apply underline text-gray-500 hover:text-indigo-600;
   }
   p {
     @apply max-w-prose sm:leading-relaxed
