--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@
     @apply underline text-gray-500 hover:text-indigo-600;
   }
   p {
-    @apply max-w-prose sm:leading-relaxed
+    @apply max-w-prose sm:text-xl sm:leading-relaxed
   }
 }
 
