--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,10 +4,10 @@
 
 @layer base {
   a {
-    @apply underline text-gray-500 hover:text-indigo-600;
+    @apply text-gray-500 underline hover:text-indigo-600;
   }
   p {
-    @apply max-w-prose sm:text-xl sm:leading-relaxed
+    @apply max-w-prose sm:text-xl sm:leading-relaxed;
   }
 }
 
